crates/formatter/tests/snapshots/snapshots__migrations__000331_app_group.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_apps add column display_group text;
