crates/formatter/tests/snapshots/snapshots__migrations__000332_workspace_agent_name_unique_trigger.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop trigger if exists workspace_agent_name_unique_trigger on workspace_agents;
drop function IF exists check_workspace_agent_name_unique ();
