crates/formatter/tests/snapshots/snapshots__migrations__000333_parameter_form_type.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table template_version_parameters drop column form_type;
drop type parameter_form_type;
