crates/formatter/tests/snapshots/snapshots__migrations__000333_parameter_form_type.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type parameter_form_type as enum (
	'',
	'error',
	'radio',
	'dropdown',
	'input',
	'textarea',
	'slider',
	'checkbox',
	'switch',
	'tag-select',
	'multi-select'
);
comment on type parameter_form_type is 'Enum set should match the terraform provider set. This is defined as future form_types are not supported, and should be rejected. ' 'Always include the empty string for using the default form type.';

-- Intentionally leaving the default blank. The provisioner will not re-run any
-- imports to backfill these values. Missing values just have to be handled.
alter table template_version_parameters
	add column form_type parameter_form_type not null default '';

comment on column template_version_parameters.form_type is 'Specify what form_type should be used to render the parameter in the UI. Unsupported values are rejected.';
