crates/formatter/tests/snapshots/snapshots__migrations__000335_ai_tasks.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Determines if a coder_ai_task resource was included in a
-- workspace build.
alter table workspace_builds
	add column has_ai_task boolean not null default false;

-- The app that is displayed in the ai tasks sidebar.
alter table workspace_builds
	add column ai_tasks_sidebar_app_id uuid default null;

alter table workspace_builds
	add constraint workspace_builds_ai_tasks_sidebar_app_id_fkey foreign key (
		ai_tasks_sidebar_app_id
	) references workspace_apps (id);

-- Determines if a coder_ai_task resource is defined in a template version.
alter table template_versions
	add column has_ai_task boolean not null default false;

-- The Tasks tab will be rendered in the UI only if there's at least one template version with has_ai_task set to true.
-- The query to determine this will be run on every UI render, and this index speeds it up.
-- SELECT EXISTS (SELECT 1 FROM template_versions WHERE has_ai_task = TRUE);
create index idx_template_versions_has_ai_task on template_versions using btree(
	has_ai_task
);

drop view workspace_build_with_user;

-- We're adding the has_ai_task and ai_tasks_sidebar_app_id columns.
create view workspace_build_with_user as
select
	workspace_builds.id,
	workspace_builds.created_at,
	workspace_builds.updated_at,
	workspace_builds.workspace_id,
	workspace_builds.template_version_id,
	workspace_builds.build_number,
	workspace_builds.transition,
	workspace_builds.initiator_id,
	workspace_builds.provisioner_state,
	workspace_builds.job_id,
	workspace_builds.deadline,
	workspace_builds.reason,
	workspace_builds.daily_cost,
	workspace_builds.max_deadline,
	workspace_builds.template_version_preset_id,
	workspace_builds.has_ai_task,
	workspace_builds.ai_tasks_sidebar_app_id,
	COALESCE(visible_users.avatar_url, ''::text) as initiator_by_avatar_url,
	COALESCE(visible_users.username, ''::text) as initiator_by_username,
	COALESCE(visible_users.name, ''::text) as initiator_by_name
from
	(
		workspace_builds
		left join visible_users on (
			(workspace_builds.initiator_id = visible_users.id)
		)
	);

comment on view workspace_build_with_user is 'Joins in the username + avatar url of the initiated by user.';

drop view template_version_with_user;

-- We're adding the has_ai_task column.
create view template_version_with_user as
select
	template_versions.id,
	template_versions.template_id,
	template_versions.organization_id,
	template_versions.created_at,
	template_versions.updated_at,
	template_versions.name,
	template_versions.readme,
	template_versions.job_id,
	template_versions.created_by,
	template_versions.external_auth_providers,
	template_versions.message,
	template_versions.archived,
	template_versions.source_example_id,
	template_versions.has_ai_task,
	COALESCE(visible_users.avatar_url, ''::text) as created_by_avatar_url,
	COALESCE(visible_users.username, ''::text) as created_by_username,
	COALESCE(visible_users.name, ''::text) as created_by_name
from
	(
		template_versions
		left join visible_users on (
			(template_versions.created_by = visible_users.id)
		)
	);

comment on view template_version_with_user is 'Joins in the username + avatar url of the created by user.';
