crates/formatter/tests/snapshots/snapshots__migrations__000338_use_deleted_boolean_for_subagents.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Restore prebuilds, previously modified in 000323_workspace_latest_builds_optimization.up.sql.
drop view workspace_prebuilds;

create view workspace_prebuilds as
with
	all_prebuilds as (
		select w.id, w.name, w.template_id, w.created_at
		from workspaces w
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
	),
	workspaces_with_latest_presets as (
		select distinct on (workspace_builds.workspace_id)
			workspace_builds.workspace_id, workspace_builds.template_version_preset_id
		from workspace_builds
		where (workspace_builds.template_version_preset_id is not null)
		order by workspace_builds.workspace_id, workspace_builds.build_number desc
	),
	workspaces_with_agents_status as (
		select
			w.id as workspace_id,
			bool_and(
				(wa.lifecycle_state = 'ready'::workspace_agent_lifecycle_state)
			) as ready
		from
			(
				(
					(
						workspaces w
						join workspace_latest_builds wlb on ((wlb.workspace_id = w.id))
					)
					join workspace_resources wr on ((wr.job_id = wlb.job_id))
				)
				join workspace_agents wa on ((wa.resource_id = wr.id))
			)
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
		group by w.id
	),
	current_presets as (
		select w.id as prebuild_id, wlp.template_version_preset_id
		from
			(
				workspaces w
				join workspaces_with_latest_presets wlp on ((wlp.workspace_id = w.id))
			)
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
	)
select
	p.id,
	p.name,
	p.template_id,
	p.created_at,
	COALESCE(a.ready, false) as ready,
	cp.template_version_preset_id as current_preset_id
from
	(
		(
			all_prebuilds p
			left join workspaces_with_agents_status a on ((a.workspace_id = p.id))
		)
		join current_presets cp on ((cp.prebuild_id = p.id))
	);

-- Restore trigger without deleted check.
drop trigger if exists workspace_agent_name_unique_trigger on workspace_agents;
drop function IF exists check_workspace_agent_name_unique ();

create or replace function check_workspace_agent_name_unique(
) returns trigger as $$
DECLARE
	workspace_build_id uuid;
	agents_with_name int;
BEGIN
	-- Find the workspace build the workspace agent is being inserted into.
	SELECT workspace_builds.id INTO workspace_build_id
	FROM workspace_resources
	JOIN workspace_builds ON workspace_builds.job_id = workspace_resources.job_id
	WHERE workspace_resources.id = NEW.resource_id;

	-- If the agent doesn't have a workspace build, we'll allow the insert.
	IF workspace_build_id IS NULL THEN
		RETURN NEW;
	END IF;

	-- Count how many agents in this workspace build already have the given agent name.
	SELECT COUNT(*) INTO agents_with_name
	FROM workspace_agents
	JOIN workspace_resources ON workspace_resources.id = workspace_agents.resource_id
	JOIN workspace_builds ON workspace_builds.job_id = workspace_resources.job_id
	WHERE workspace_builds.id = workspace_build_id
		AND workspace_agents.name = NEW.name
		AND workspace_agents.id != NEW.id;

	-- If there's already an agent with this name, raise an error
	IF agents_with_name > 0 THEN
		RAISE EXCEPTION 'workspace agent name "%" already exists in this workspace build', NEW.name
			USING ERRCODE = 'unique_violation';
	END IF;

	RETURN NEW;
END;
$$ language plpgsql;

create trigger workspace_agent_name_unique_trigger before insert or update of name,
resource_id on workspace_agents for each row execute function check_workspace_agent_name_unique(
);

comment on trigger workspace_agent_name_unique_trigger on workspace_agents is 'Use a trigger instead of a unique constraint because existing data may violate
the uniqueness requirement. A trigger allows us to enforce uniqueness going
forward without requiring a migration to clean up historical data.';

alter table workspace_agents drop column deleted;
